# behavior_senpai

./: .gitignore  README-en.md  README-ja.md  README.md  _config.yml  behavior_senpai.code-workspace  behavior_senpai_mac.sh  insight.bat  launcher.bat  launcher.sh  member_edit.csv  pyproject.toml  pyproject_nogpu.toml  update.bat  venv_mac.sh
docs/: README.md  _config.yml
mm_config/: qdtrack_faster-rcnn_r50_fpn_4e_base.py  qdtrack_faster-rcnn_r50_fpn_8xb2-4e_mot17halftrain_test-mot17halfval.py  rtmw-x_8xb320-270e_cocktail14-384x288.py
src/: app_2point_calc.py  app_3point_calc.py  app_area_filter.py  app_calc_vector.py  app_compare.py  app_compare_category_file.py  app_compare_files.py  app_detect.py  app_dimredu.py  app_dlc_to_trk.py  app_feat_mix.py  app_insight.py  app_keypoint_samples.py  app_make_mp4.py  app_member_edit.py  app_points_calc.py  app_recuplot.py  app_scene_table.py  app_smoothing.py  app_track_list.py  app_trajplot.py  band_plotter.py  detector_proc.py  dimredu_plotter.py  dst.csv  export_csv.py  export_mp4.py  gui_feat_mix.py  gui_parts.py  gui_points_calc.py  gui_tree.py  keypoint_plotter.py  keypoints_proc.py  keypoints_to_another.py  keypoints_to_band.py  keypoints_to_crossprod.py  keypoints_to_figure.py  keypoints_to_mp4.py  keypoints_to_recuplot.py  keypoints_to_trajplot.py  (+30 more)
src/behavior_senpai/: calc_features.py  deeplabcut_hdf.py  df_attrs.py  feature_proc.py  file_inout.py  hdf_df.py  img_draw.py  keypoint_toml_loader.py  keypoints_proc.py  mediapipe_detector.py  mediapipe_drawer.py  pose_drawer.py  rtmpose_detector.py  rtmpose_drawer.py  vcap.py  windows_and_mac.py  yolo_detector.py  yolo_drawer.py
src/keypoint/: coco133.toml  coco17.toml  halpe26.toml  mediapipe_holistic.toml
src/python_senpai/: df_attrs.py  file_inout.py  img_draw.py  keypoints_proc.py  time_format.py  trk_file_proc.py  vcap.py  windows_and_mac.py
src/samplecode/: concat_track_file.py  duration_filter.py  feature_mixer.py  filter_track.py  open_feat_file.py  open_track_file.py  print_track_file.py
