[project]
name = "behavior-senpai"
version = "1.3.2"
description = "A collection of Python scripts and applications for supporting Quantitative Behavioral Observation using videos."
dependencies = [
    "torch~=2.1.0",
    "ultralytics~=8.2.0",
    "lapx~=0.5",
    "mediapipe~=0.10.0",
    "mmcv~=2.1.0",
    "mmdet~=3.3.0",
    "chumpy==0.66",
    "mmpose~=1.3.0",
    "scikit-learn~=1.5.0",
    "pyperclip~=1.9.0",
    "ttkthemes~=3.2",
    "umap-learn>=0.5.6",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pip-licenses~=4.3.3",
]

[tool.rye.scripts]
launcher = "python src/launcher.py"
compare = "python src/app_compare.py"
detector = "python src/app_detect.py"
updatesenpai = "python src/update.py"
license = "pip-licenses --order=license -u -l --no-license-path --format=json --output-file src/license.json"

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
type = "index"

[[tool.rye.sources]]
name = "mmcv"
url = "https://download.openmmlab.com/mmcv/dist/cu121/torch2.1/index.html"
type = "find-links"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
]
ignore = []
# 1行の最大文字数
line-length = 150

extend-ignore = [
    "D105", # undocumented-magic-method
    "D107", # undocumented-public-init
    "D205", # blank-line-after-summary
    "D415" # ends-in-punctuation
]