[project]
name = "behavior-senpai"
version = "1.5.1"
description = "A collection of Python scripts and applications for supporting Quantitative Behavioral Observation using videos."
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "torch==2.1.2+cu121",
    "torchvision==0.16.2+cu121",
    "ultralytics~=8.3.0",
    "lapx~=0.5",
    "mediapipe==0.10.14",
    "mmcv==2.1.0",
    "mmdet==3.3.0",
    "chumpy==0.66",
    "mmpose~=1.3.0",
    "scikit-learn~=1.5.0",
    "pyperclip~=1.9.0",
    "ttkthemes~=3.2",
    "umap-learn~=0.5.0",
    "pip-licenses~=4.3.0",
    "tables>=3.10.2",
    "numpy~=1.26",
    "seaborn>=0.13.2",
]

[tool.uv]
extra-index-url = [
    "https://download.pytorch.org/whl/cu121"
]
find-links = [
    "https://download.openmmlab.com/mmcv/dist/cu121/torch2.1/index.html"
]

[tool.ruff]
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
]
ignore = []
line-length = 150

extend-ignore = [
    "D105", # undocumented-magic-method
    "D107", # undocumented-public-init
    "D205", # blank-line-after-summary
    "D415" # ends-in-punctuation
]
