[project]
name = "behavior-senpai"
version = "1.6.0"
description = "An applications for supporting Behavioral Observation."
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "mediapipe~=0.10.0",
    "scikit-learn~=1.5.0",
    "pyperclip~=1.9.0",
    "ttkthemes~=3.2",
    "numpy~=1.26",
    "seaborn~=0.13",
    "umap-learn>=0.5.6",
    "tables>=3.10.2",
]

[project.optional-dependencies]
cuda = [
    "torch==2.1.2+cu121; sys_platform == 'win32'",
    "torchvision==0.16.2+cu121; sys_platform == 'win32'",
    "ultralytics~=8.3.0; sys_platform == 'win32'",
    "lapx~=0.5; sys_platform == 'win32'",
    "mmcv==2.1.0; sys_platform == 'win32'",
    "mmdet==3.3.0; sys_platform == 'win32'",
    "chumpy==0.66; sys_platform == 'win32'",
    "mmpose~=1.3.0; sys_platform == 'win32'",
]

[tool.uv]
find-links = [
    "https://download.openmmlab.com/mmcv/dist/cu121/torch2.1/index.html"
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", extra = "cuda" },
]
torchvision = [
    { index = "pytorch-cu121", extra = "cuda" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.ruff]
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
]
ignore = []
line-length = 150

extend-ignore = [
    "D105", # undocumented-magic-method
    "D107", # undocumented-public-init
    "D205", # blank-line-after-summary
    "D415" # ends-in-punctuation
]
